Updated README with image links

--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
   "name": "react-native-amazing-date-picker",
-  "version": "1.0.18",
+  "version": "1.0.21",
   "description": "The react-native-amazing-date-picker is a powerful and visually appealing spinning date picker for both Android and iOS platforms. This customizable component offers a sleek and intuitive user interface, allowing users to effortlessly select dates using a smooth, spinning wheel. Designed with flexibility and style in mind, this date picker integrates seamlessly into any React Native application, enhancing the user experience with minimal setup.",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sourabh atigre",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elfunky/react-native-amazing-date-picker.git"
+  },
+  "keywords": [
+    "react-native",
+    "date-picker",
+    "spinning date picker",
+    "react-native component",
+    "ios",
+    "android"
+  ],
+  "author": {
+    "name": "Sourabh Atigre",
+    "email": "sourabhatigre100@gmail.com",
+    "url": "https://github.com/elfunky"
+  },
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/elfunky/react-native-amazing-date-picker/issues"
+  },
+  "homepage": "https://github.com/elfunky/react-native-amazing-date-picker#readme",
   "peerDependencies": {
     "react": "18.2.0",
     "react-native": "0.72.4",
